--- a/models/marts/fct_orders.yml
+++ b/models/marts/fct_orders.yml
@@ -2,6 +2,7 @@ version: 2
 
 models:
   - name: fct_orders
+    latest_version: 1
     config:
       contract:
         enforced: true
@@ -46,3 +47,15 @@ models:
 
       - name: ordered_year
         data_type: NUMBER
+    versions:
+      - v: 1
+        config:
+          alias: fct_orders
+      - v: 2
+        columns:
+          - name: order_amount
+            data_type: number
+          - name: location_opened_at
+            data_type: date
+          - include: all
+            exclude: [order_total]
